# MPS_Tool_Kit

./: .gitignore  CMakeLists.txt  Docs.md  Doxyfile  LICENSE  README.md  linking lib.txt  main.yml
.github/workflows/: main.yml
Docs/: Docs.md  docConfig
appSrc/: Calculate_PQ_EOTF.cpp  GetPrimaries.cpp  LUT_App.cpp  testProgram.cpp
apps/: Calculate_PQ_EOTF.cpp  GetPrimaries.cpp  ToICtCp.cpp
docs/: _color_module_8hpp.html  _color_module_8hpp_source.html  _color_spaces_8cpp.html  _color_spaces_8hpp.html  _color_spaces_8hpp_source.html  _h_d_r___tran_func_8cpp.html  _h_d_r___tran_func_8hpp.html  _h_d_r___tran_func_8hpp_source.html  annotated.html  class_m_p_s_1_1_c_i_edelta_e.html  class_m_p_s_1_1_program_options.html  class_m_p_s_1_1_scope_timer.html  class_m_p_s_1_1color_primaries.html  class_m_p_s_1_1phosphor_matrix.html  classes.html  delta_e_8cpp.html  delta_e_8hpp.html  delta_e_8hpp_source.html  dir_08ac12db0cff00d78640bf76b85ba2db.html  dir_6a761e67bc65fce1c2523694eb02145f.html  dir_73c13e664b4ba0eb752d3c1b3b3206d8.html  dir_a3b43b7c8287d49f1e6d6e95f7639b97.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  menudata.js  namespace_m_p_s.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespaces.html  program_options_8cpp.html  utilities_8cpp.html  utilities_8hpp.html  (+1 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+15 more)
libSrc/: mpsVersion.hpp
libSrc/Color/: ColorModule.hpp  ColorSpaces.cpp  ColorSpaces.hpp  LUT.cpp  LUT.hpp  deltaE.cpp  deltaE.hpp  temp.cpp  test
libSrc/Core/: macro_typedef.hpp
libSrc/PythonBindings/: Color_PyBindings.hpp  PythonBindings.cpp  TransferFunctions_PyBindings.hpp
libSrc/TransferFunctions/: HDR_TranFunc.cpp  HDR_TranFunc.hpp
libSrc/Utilities/: csvReader.cpp  programOptions.cpp  utilities.cpp  utilities.hpp
src/: CMakeLists.txt
src/Color/: ColorSpaces.cpp  ColorSpaces.hpp
src/TransferFunctions/: HDR_TranFunc.hpp
